k8s/ab-testing/deployment-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-app-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-app-ab
      variant: a
      strategy: ab-testing
  template:
    metadata:
      labels:
        app: aceest-app-ab
        variant: a
        strategy: ab-testing
    spec:
      containers:
        - name: aceest-app
          image: aceest-app:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
