k8s/ab-testing/deployment-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-app-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-app-ab
      variant: b
      strategy: ab-testing
  template:
    metadata:
      labels:
        app: aceest-app-ab
        variant: b
        strategy: ab-testing
    spec:
      containers:
        - name: aceest-app
          image: aceest-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
