k8s/ab-testing/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-app-a
spec:
  selector:
    app: aceest-app-ab
    variant: a
  ports:
    - name: http
      port: 80
      targetPort: 5000
