k8s/ab-testing/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-app-b
spec:
  selector:
    app: aceest-app-ab
    variant: b
  ports:
    - name: http
      port: 80
      targetPort: 5000
