k8s/ab-testing/ingress-experiment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-app-experiment
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: X-Experiment
    nginx.ingress.kubernetes.io/canary-by-header-value: B
spec:
  ingressClassName: nginx
  rules:
    - host: aceest-ab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aceest-app-b
                port:
                  number: 80
